package com.tricol.supply.model.enums;

public enum StatutCommande {
    EN_ATTENTE,
    VALIDEE,
    LIVREE,
    ANNULEE
}

