package com.tricol.supply.model.enums;

public enum TypeMouvement {
    ENTREE,
    SORTIE,
    AJUSTEMENT
}

